navbar and logos

--- a/portfolio-nextjs/styles/globals.css
+++ b/portfolio-nextjs/styles/globals.css
@@ -2,3 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* html {
+  scroll-behavior: smooth;
+} */
+
+@layer base {
+  h1 {
+    @apply text-4xl sm:text-5xl md:text-6xl;
+  }
+}
