--- a/portfolio-nextjs/styles/globals.css
+++ b/portfolio-nextjs/styles/globals.css
@@ -1,14 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@tailwind plugins;
 
 
 /* html {
   scroll-behavior: smooth;
 } */
 
-@layer base {
+/* @layer base {
   h1 {
     @apply text-4xl sm:text-5xl md:text-6xl;
   }
-}
+} */ 
